@@ -131,8 +131,8 @@ or <a href="http://www.unidata.ucar.edu/mailing_lists/archives/netcdf-java/">bro
 <h3>Coordinate Systems<a name="CoordSys"></a></h3>
 <p>Working notes and documentation on the <strong><em>coordinate system</em></strong> layer of the CDM</p>
 <ul>
-  <li><a href="CoordinateSystemsNeeded.htm">Why we need Coordinate Systems</a> </li>
-  <li>Coordinate System <a href="reference/CSObjectModel.html">Object Model Primer </a></li>
+  <li><a href="CDM/index.html">CDM Data Model and Coordinate Systems</a></li>
+  <li><a href="CoordinateSystemsNeeded.htm">Why we need Coordinate Systems</a></li>
   <li>_Coordinate Attribute Conventions (<a href="tutorial/CoordinateAttributes.html">examples</a>) (<a href="reference/CoordinateAttributes.html">reference</a>) </li>
 </ul>
 <h3>Data Types </h3>
