@@ -1,7 +1,7 @@
 # DO NOT EDIT THIS FILE: It is automatically generated from C:\dev\tds\thredds\tds\tds.properties.TEMPLATE
 tds.version=4.0.05
 tds.version.brief=4.0
-tds.version.builddate=20090227.0424
+tds.version.builddate=20090227.1454
 
 tds.url=http://www.unidata.ucar.edu/projects/THREDDS/tech/TDS.html
 tds.documentation.url=http://www.unidata.ucar.edu/projects/THREDDS/tech/TDS.html
